class TrainingItem {
  final String _id;
  final String _name;
  final int _count;

  TrainingItem(this._id, this._name, this._count);

  String getId() => _id;
  String getName() => _name;
  int getCount() => _count;
}
